Introducing session and score
